Align file URL handling with the shared cache pipeline
File-based resources now follow the same cache-backed resolution path as
HTTP resources by default, improving consistency across launch modes and
making local, functional, and integration testing exercise the
production cache flow. The legacy direct-file passthrough remains
available behind a non-final compatibility switch, while focused AssertJ
integration coverage verifies both the default cached behavior and the
preserved fallback path.